force-app/main/default/objects/Playlist_Song__c/Playlist_Song__c.object-meta.xml
<CustomObject>
    <label>Playlist Song</label>
    <nameField>
        <label>Playlist Song Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playlist Songs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>