force-app/main/default/objects/Playlist_Song__c/fields/Duration_Song__c.field-meta.xml
<CustomField>
    <fullName>Duration_Song__c</fullName>
    <formula>Duration__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Song</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>