force-app/main/default/objects/Playlist_Song__c/fields/PlaylistId__c.field-meta.xml
<CustomField>
    <fullName>PlaylistId__c</fullName>
    <label>PlaylistId</label>
    <referenceTo>User_Playlist__c</referenceTo>
    <relationshipName>playlist_songs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>