force-app/main/default/objects/Playlist_Song__c/fields/SongId__c.field-meta.xml
<CustomField>
    <fullName>SongId__c</fullName>
    <label>SongId</label>
    <referenceTo>Song__c</referenceTo>
    <relationshipName>playlist_songs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>